# avro

.buzzy/: package.yaml
lang/c/: .gitignore  CMakeLists.txt  version.sh
lang/c/docs/: avro-values.c  avro-values.html  custom-value-class.c  custom-value-class.html
lang/c/src/: .gitignore  CMakeLists.txt  Makefile.am  allocation.c  allocation.h  array.c  avro.h  avro_generic_internal.h  avrocc.c  codec.c  consumer.c  datafile.c  datum.c  datum_json.c  datum_read.c  datum_value.c  datum_write.c  encoding_binary.c  errors.c  generic.c  io.c  map.c  memoize.c  raw_compare.c  raw_consume.c  raw_resolvers.c  resolved-reader.c  resolved-writer.c  resolver.c  schema.c  schema.h  schema_specific.c  string.c  value-json.c  value.c  wrapped-buffer.c
lang/c/src/avro/: allocation.h  consumer.h  data.h  errors.h  refcount.h  schema.h  specific.c.in  specific.h  specific.h.in  value.h
lang/c/src/avro/specific/: accessors.h.in  array.c.in  comparison.c.in  comparison.h.in  consume.c.in  consume.h.in  done.c.in  init.c.in  lifecycle.h.in  map.c.in  resolver.c.in  resolver.h.in  schema.c.in  typedef.h.in  union.h.in  union_set.c.in
lang/c/tests/: .gitignore  CMakeLists.txt  Makefile.am  list.avsc  performance.c  point.avsc  specific.c  test_avro_1238.c  test_avro_values.c  test_data_structures.c  test_empty_file.c  test_specific.c  tile-test
